2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* coserv.tcl: Fixed usage of temp. files by comm server.

	* coserv.tcl: Fixed output for a better fit with the other test
	* dialog.tcl: support.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added variants of the use commands which keep
	  the relevant namespace. Sometimes necessary to prevent
	  destruction of support code loaded first.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added commands for the loading of files and
	  packages from the Tcllib under test. This will reduce the amount
	  of boilerplate in a .test file spent on getting the package
	  under test, its supporting packages, and other helper files.

	  Added helpers for dealing with loading "tcllibc" package and
	  packages using it.

2006-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Moved the definitions of the common
	  constraints out of the toplevel "all.tcl" into the test support
	  code.

2006-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: New file for boilerplate code and common
	  commands used by most to all testsuites in Tcllib.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2004-10-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dialog.tcl: More log output for better tracing of the
	  internals. Especially added trace when receiving an incomplete
	  line while waiting for data from the peer. Added code to clean
	  up old connections, prevent leakage of channel handles.

2004-10-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* muserv.tcl:  Removed the old facilities for sub processes
	* musub.tcl:   and programmed interactions. They have been
	* subserv.tcl: superceded by the code below.
